crates/store/re_dataframe/src/snapshots/re_dataframe__query__tests__async_barebones-2.snap
---
source: crates/store/re_dataframe/src/query.rs
assertion_line: 2378
expression: dataframe.all_columns_collected()
snapshot_kind: text
---
[
    Int64[10, 20, 30, 40, 50, 60, 70],
    Timestamp(Nanosecond, None)[1970-01-01 00:00:00.000000010, None, None, None, 1970-01-01 00:00:00.000000050, None, 1970-01-01 00:00:00.000000070],
    ListArray[None, None, [2], [3], [4], None, [6]],
    ListArray[[c], [c], [c], [c], [c], [c], [c]],
    ListArray[[{x: 0, y: 0}], [{x: 1, y: 1}], [{x: 2, y: 2}], [{x: 3, y: 3}], [{x: 4, y: 4}], [{x: 5, y: 5}], [{x: 8, y: 8}]],
]
