crates/store/re_dataframe/src/snapshots/re_dataframe__query__tests__async_barebones.snap
---
source: crates/store/re_dataframe/src/query.rs
assertion_line: 2347
expression: dataframe.all_columns_collected()
snapshot_kind: text
---
[
    Int64[None],
    Timestamp(Nanosecond, None)[None],
    ListArray[None],
    ListArray[[c]],
    ListArray[None],
]
