crates/store/re_dataframe/src/snapshots/re_dataframe__query__tests__filtered_index_values.snap
---
source: crates/store/re_dataframe/src/query.rs
expression: DisplayRB(dataframe)
---
┌──────────────────────┬──────────────────────┬────────────────────────────────────┬────────────────────────────────────┬──────────────────────────────────────┐
│ frame_nr             ┆ log_time             ┆ /this/that:example.MyPoints:colors ┆ /this/that:example.MyPoints:labels ┆ /this/that:example.MyPoints:points   │
│ ---                  ┆ ---                  ┆ ---                                ┆ ---                                ┆ ---                                  │
│ type: Int64          ┆ type: Timestamp(ns)  ┆ type: List(UInt32)                 ┆ type: List(Utf8)                   ┆ type: List(Struct("x": non-null      │
│ index_name: frame_nr ┆ index_name: log_time ┆ archetype: example.MyPoints        ┆ archetype: example.MyPoints        ┆ Float32, "y": non-null Float32))     │
│ kind: index          ┆ kind: index          ┆ component: example.MyPoints:colors ┆ component: example.MyPoints:labels ┆ archetype: example.MyPoints          │
│                      ┆                      ┆ component_type: example.MyColor    ┆ component_type: example.MyLabel    ┆ component: example.MyPoints:points   │
│                      ┆                      ┆ entity_path: /this/that            ┆ entity_path: /this/that            ┆ component_type: example.MyPoint      │
│                      ┆                      ┆ kind: data                         ┆ is_static: true                    ┆ entity_path: /this/that              │
│                      ┆                      ┆                                    ┆ kind: data                         ┆ kind: data                           │
╞══════════════════════╪══════════════════════╪════════════════════════════════════╪════════════════════════════════════╪══════════════════════════════════════╡
│ 30                   ┆ null                 ┆ [2]                                ┆ [c]                                ┆ [{x: 2.0, y: 2.0}]                   │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 60                   ┆ null                 ┆ null                               ┆ [c]                                ┆ [{x: 5.0, y: 5.0}]                   │
└──────────────────────┴──────────────────────┴────────────────────────────────────┴────────────────────────────────────┴──────────────────────────────────────┘
