crates/store/re_dataframe/src/snapshots/re_dataframe__query__tests__filtered_is_not_null-4.snap
---
source: crates/store/re_dataframe/src/query.rs
expression: DisplayRB(dataframe)
---
┌──────────────────────┬───────────────────────────────┬────────────────────────────────────┬────────────────────────────────────┬──────────────────────────────────────┐
│ frame_nr             ┆ log_time                      ┆ /this/that:example.MyPoints:colors ┆ /this/that:example.MyPoints:labels ┆ /this/that:example.MyPoints:points   │
│ ---                  ┆ ---                           ┆ ---                                ┆ ---                                ┆ ---                                  │
│ type: Int64          ┆ type: Timestamp(ns)           ┆ type: List(UInt32)                 ┆ type: List(Utf8)                   ┆ type: List(Struct("x": non-null      │
│ index_name: frame_nr ┆ index_name: log_time          ┆ archetype: example.MyPoints        ┆ archetype: example.MyPoints        ┆ Float32, "y": non-null Float32))     │
│ kind: index          ┆ kind: index                   ┆ component: example.MyPoints:colors ┆ component: example.MyPoints:labels ┆ archetype: example.MyPoints          │
│                      ┆                               ┆ component_type: example.MyColor    ┆ component_type: example.MyLabel    ┆ component: example.MyPoints:points   │
│                      ┆                               ┆ entity_path: /this/that            ┆ entity_path: /this/that            ┆ component_type: example.MyPoint      │
│                      ┆                               ┆ kind: data                         ┆ is_static: true                    ┆ entity_path: /this/that              │
│                      ┆                               ┆                                    ┆ kind: data                         ┆ kind: data                           │
╞══════════════════════╪═══════════════════════════════╪════════════════════════════════════╪════════════════════════════════════╪══════════════════════════════════════╡
│ 30                   ┆ null                          ┆ [2]                                ┆ [c]                                ┆ [{x: 2.0, y: 2.0}]                   │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 40                   ┆ null                          ┆ [3]                                ┆ [c]                                ┆ [{x: 3.0, y: 3.0}]                   │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 50                   ┆ 1970-01-01T00:00:00.000000050 ┆ [4]                                ┆ [c]                                ┆ [{x: 4.0, y: 4.0}]                   │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ 70                   ┆ 1970-01-01T00:00:00.000000070 ┆ [6]                                ┆ [c]                                ┆ [{x: 8.0, y: 8.0}]                   │
└──────────────────────┴───────────────────────────────┴────────────────────────────────────┴────────────────────────────────────┴──────────────────────────────────────┘
